--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
+    "@tailwindcss/vite": "^4.0.15",
     "@types/leaflet": "^1.9.16",
     "i18next": "^24.2.3",
     "i18next-browser-languagedetector": "^8.0.4",
@@ -21,7 +22,8 @@
     "react-dom": "^19.0.0",
     "react-i18next": "^15.4.1",
     "react-leaflet": "^5.0.0",
-    "react-leaflet-markercluster": "^5.0.0-rc.0"
+    "react-leaflet-markercluster": "^5.0.0-rc.0",
+    "tailwindcss": "^4.0.15"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
